<resources>
    <string name="app_name">Recipe App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="label_ingredients">Ingredients</string>
    <string name="recipe_types">Recipe Types</string>
    <string name="steps">Steps</string>
    <string name="add">Add</string>
    <string name="upload_img">Upload Image</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="name_hint">Enter Recipe Name Here</string>
    <string name="ingredients_hint">Enter Ingredients Here</string>
    <string name="steps_hint">Enter Steps Here</string>
    <string name="add_description">Button For Adding A New Recipe</string>
</resources>